--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -257,6 +257,7 @@ common/views/widgets/posts-monitor.vue:
 
 common/views/widgets/hashtags.vue:
   title: "ハッシュタグ"
+  count: "{}人が投稿"
 
 common/views/widgets/server.vue:
   title: "サーバー情報"
