--- a/locales/de.yml
+++ b/locales/de.yml
@@ -333,7 +333,7 @@ desktop/views/components/friends-maker.vue:
   refresh: "Mehr"
   close: "Schließen"
 desktop/views/components/game-window.vue:
-  game: "Othello"
+  game: "Reversi"
 desktop/views/components/home.vue:
   done: "Verbunden"
   add-widget: "Widget hinzufügen:"
