--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -384,7 +384,7 @@ desktop/views/components/friends-maker.vue:
   close: "閉じる"
 
 desktop/views/components/game-window.vue:
-  game: "オセロ"
+  game: "リバーシ"
 
 desktop/views/components/home.vue:
   done: "完了"
