--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -280,6 +280,13 @@ common/views/widgets/memo.vue:
   memo: "ここに書いて！"
   save: "保存"
 
+common/views/pages/follow.vue:
+  signed-in-as: "{}としてサインイン中"
+  following: "フォロー中"
+  follow: "フォロー"
+  request-pending: "フォロー許可待ち"
+  follow-request: "フォロー申請"
+
 desktop/views/components/activity.chart.vue:
   total: "Black ... Total"
   notes: "Blue ... Notes"
