--- a/locales/de.yml
+++ b/locales/de.yml
@@ -400,7 +400,7 @@ desktop/views/components/post-form.vue:
   attach-media-from-local: "Medien von deinem PC hinzufügen"
   attach-media-from-drive: "Medien von deinem Speicher hinzufügen"
   attach-cancel: "Hinzufügen abbrechen"
-  insert-a-kao: "v(‘ω’)v"
+  insert-a-kao: "v('ω')v"
   create-poll: "Eine Abstimmung erstellen"
   text-remain: "{} Zeichen verbleibend"
 desktop/views/components/post-form-window.vue:
