--- a/locales/en.yml
+++ b/locales/en.yml
@@ -40,7 +40,7 @@ common:
     b: "What's happening?"
     c: "What’s on your mind?"
     d: "What do you want to talk about?"
-    e: "Write here!"
+    e: "Write your thoughts here!"
     f: "Waiting for your writing..."
   search: "Search"
   delete: "Delete"
@@ -77,7 +77,7 @@ common:
     post-form: "Post form"
     messaging: "Messages"
     server: "Server info"
-    donation: "Donation"
+    donation: "Donations"
     nav: "Navigation"
     tips: "Tips"
     hashtags: "Hashtags"
