--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -1101,7 +1101,9 @@ docs:
       no-params: "パラメータはありません"
       res: "レスポンス"
       require-credential: "このエンドポイントは認証情報が必須です。"
-      limit: "レートリミットがあります。直近{duration}ミリ秒の間のこのエンドポイントへのリクエスト数の合計が{max}を超える場合はリクエストできません。"
+      has-limit: "レートリミットがあります。"
+      duration-limit: "直近{duration}ミリ秒の間のこのエンドポイントへのリクエスト数の合計が{max}を超える場合はリクエストできません。"
+      min-interval-limit: "前回のリクエストから{interval}ミリ秒経っていない場合はリクエストできません。"
     props:
       name: "名前"
       type: "型"
