--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -330,6 +330,8 @@ desktop/views/components/drive.file.vue:
   banner: "バナー"
   contextmenu:
     rename: "名前を変更"
+    mark-as-sensitive: "閲覧注意に設定"
+    unmark-as-sensitive: "閲覧注意を解除"
     copy-url: "URLをコピー"
     download: "ダウンロード"
     else-files: "その他..."
@@ -376,6 +378,10 @@ desktop/views/components/drive.vue:
     create-folder: "フォルダーを作成"
     upload: "ファイルをアップロード"
     url-upload: "URLからアップロード"
+
+desktop/views/components/media-image.vue:
+  sensitive: "閲覧注意"
+  click-to-show: "クリックして表示"
 
 desktop/views/components/follow-button.vue:
   following: "フォロー中"
@@ -852,6 +858,10 @@ mobile/views/components/drive.file-detail.vue:
   move: "移動"
   hash: "ハッシュ (md5)"
   exif: "EXIF"
+
+mobile/views/components/media-image.vue:
+  sensitive: "閲覧注意"
+  click-to-show: "クリックして表示"
 
 mobile/views/components/follow-button.vue:
   following: "フォロー中"
