--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,7 +5,7 @@ meta:
 common:
   misskey: "A ⭐ of the fediverse"
   about-title: "A ⭐ of the fediverse."
-  about: "Thank you for finding Misskey. Misskey is a <b>decentralized microblogging platform</b> born on Earth. Since it exists within the Fediverse (a universe where various social media platforms are organized), it is mutually linked with other social media platforms. Why don't you take a short break from the hustle and bustle of the city, and dive into a new Internet?"
+  about: "Thank you for finding notfreespee.ch. Notfreespee.ch is a <b>decentralized microblogging platform</b> born in the mind of a mad doctor. Since it exists within the Fediverse (a universe where various social media platforms are organized), it is mutually linked with other social media platforms. Why don't you take a short break from the hustle and bustle of the city, and dive into a new Internet?"
   time:
     unknown: "unknown"
     future: "future"
@@ -47,7 +47,7 @@ common:
   loading: "Loading"
   ok: "OK"
   update-available-title: "Update available"
-  update-available: "A new version of Misskey is now available({newer}, the current version is {current}). Reload the page to apply updates."
+  update-available: "A new version of notfreespee.ch is now available({newer}, the current version is {current}). Reload the page to apply updates."
   my-token-regenerated: "Your token has been regenerated, so you will be signed out."
   i-like-sushi: "I prefer sushi rather than pudding"
   show-reversi-board-labels: "Show row and column labels in Reversi"
@@ -102,7 +102,7 @@ common:
 common/views/components/connect-failed.vue:
   title: "Unable to connect to the server"
   description: "There is a problem with your Internet connection, or the server may be down or under maintenance. Please try again later."
-  thanks: "Thank you for using Misskey."
+  thanks: "Thank you for using notfreespee.ch."
   troubleshoot: "Troubleshoot"
 common/views/components/connect-failed.troubleshooter.vue:
   title: "Troubleshooting"
@@ -117,9 +117,9 @@ common/views/components/connect-failed.troubleshooter.vue:
   no-network-desc: "Please make sure that you have a network connection."
   no-internet: "There is no Internet connection"
   no-internet-desc: "Please make sure you are connected to the Internet."
-  no-server: "Unable to connect to the Misskey server"
-  no-server-desc: "The network connection of your device is normal, but you could not connect to the Misskey server. There is a possibility that the server is either down, or under maintenance, please try again later."
-  success: "Successfully connected to the Misskey server"
+  no-server: "Unable to connect to the Notfreespee.ch server"
+  no-server-desc: "The network connection of your device is normal, but you could not connect to the Notfreespee.ch server. There is a possibility that the server is either down, or under maintenance, please try again later."
+  success: "Successfully connected to the Notfreespee.ch server"
   success-desc: "It seems to be able to connect. Please reload the page."
   flush: "Clean cache"
   set-version: "Specify version"
@@ -206,7 +206,7 @@ common/views/components/stream-indicator.vue:
   reconnecting: "Reconnecting"
   connected: "Connected"
 common/views/components/twitter-setting.vue:
-  description: "Once you connect your Twitter account to your Misskey account, you will be able to see information about your Twitter account on your profile, and you will be able to sign-in using Twitter."
+  description: "Once you connect your Twitter account to your Notfreespee.ch account, you will be able to see information about your Twitter account on your profile, and you will be able to sign-in using Twitter."
   connected-to: "You are connected to this Twitter account"
   detail: "Details..."
   reconnect: "Reconnect"
@@ -230,7 +230,7 @@ common/views/widgets/broadcast.vue:
   next: "Next"
 common/views/widgets/donation.vue:
   title: "Request for donations"
-  text: "To keep Misskey up and running, we have to spend money on our domain name, the server costs and so on. Since we don't receive money from advertisements, we count on donations from all of you. If you're interested in helping, contact {}. Thank you for your contribution!"
+  text: "To keep Notfreespee.ch up and running, we have to spend money on our domain name, the server costs and so on. Since we don't receive money from advertisements, we count on donations from all of you. If you're interested in helping, contact {}. Thank you for your contribution!"
 common/views/widgets/photo-stream.vue:
   title: "Photo stream"
   no-photos: "No photos"
@@ -487,9 +487,9 @@ desktop/views/components/settings.vue:
   cache-cleared-desc: "Please reload the page."
   auto-watch: "Automatic watch"
   auto-watch-desc: "Receive notifications about the post/reply/reaction automatically."
-  about: "About Misskey"
+  about: "About Notfreespee.ch"
   operator: "The admin of this instance"
-  update: "Misskey Update"
+  update: "Notfreespee.ch Update"
   version: "Version:"
   latest-version: "Latest version:"
   update-checking: "Checking for updates"
@@ -498,14 +498,14 @@ desktop/views/components/settings.vue:
   prevent-update: "Postpone updates (not recommended)"
   prevent-update-desc: "Even if you turn this setting on, updates may apply. This setting is enabled only for this device."
   no-updates: "No updates available"
-  no-updates-desc: "Your Misskey is up to date."
+  no-updates-desc: "Your Notfreespee.ch is up to date."
   update-available: "A new version is available"
   update-available-desc: "The updates will apply if you reload the page again."
   advanced-settings: "Advanced"
   debug-mode: "Enable the debug mode"
   debug-mode-desc: "This setting is stored in the browser."
   experimental: "Enable experimental features"
-  experimental-desc: "Activating this might make the Misskey client unstable. This setting is stored in the browser."
+  experimental-desc: "Activating this might make the Notfreespee.ch client unstable. This setting is stored in the browser."
   tools: "Tools"
   task-manager: "Task Manager"
   third-parties: "Third-parties"
@@ -513,7 +513,7 @@ desktop/views/components/settings.2fa.vue:
   intro: "If you set up 2-step verification, you will not only need a password at sign-in, but also a pre-registered physical device (such as your smartphone), which will improve security."
   detail: "See details..."
   url: "https://www.google.com/landing/2step/"
-  caution: "If you lose access to your device, you won't be able to connect to Misskey anymore!"
+  caution: "If you lose access to your device, you won't be able to connect to Notfreespee.ch anymore!"
   register: "Register a device"
   already-registered: "A device is already registered"
   unregister: "Disable"
@@ -526,7 +526,7 @@ desktop/views/components/settings.2fa.vue:
   submit: "Submit"
   success: "Settings saved!"
   failed: "Failed to setup. Please ensure that the token is correct."
-  info: "From now on, enter the token that is displayed on your device in addition to your password when signing-in to Misskey."
+  info: "From now on, enter the token that is displayed on your device in addition to your password when signing-in to notfreespee.ch."
 desktop/views/components/settings.api.vue:
   intro: "To access the API, set this token as the key 'i' of request parameters."
   caution: "Please do not show this token to third parties (do not enter it somewhere else other than here) otherwise your account could get compromised."
@@ -632,7 +632,7 @@ desktop/views/pages/welcome.vue:
   signup-button: "Sign up"
   timeline: "Timeline"
 desktop/views/pages/drive.vue:
-  title: "Misskey storage"
+  title: "notfreespee.ch storage"
 desktop/views/pages/favorites.vue:
   more: "Load more"
 desktop/views/pages/home-customize.vue:
@@ -813,7 +813,7 @@ mobile/views/components/ui.nav.vue:
   game: "Games"
   darkmode: "Dark mode"
   settings: "Settings"
-  about: "About Misskey"
+  about: "About notfreespee.ch"
 mobile/views/components/user-timeline.vue:
   no-notes: "It seems this user hasn't posted anything yet."
   no-notes-with-media: "There are no notes with media attachments"
@@ -900,13 +900,13 @@ mobile/views/pages/settings.vue:
   twitter-connect: "Connect to your Twitter account"
   twitter-reconnect: "Reconnect"
   twitter-disconnect: "Disconnect"
-  update: "Misskey Update"
+  update: "Notfreespee.ch Update"
   version: "Current version:"
   latest-version: "Latest version:"
   update-checking: "Checking for updates"
   check-for-updates: "Check for updates"
   no-updates: "No updates available"
-  no-updates-desc: "Your Misskey is up to date."
+  no-updates-desc: "Your Notfreespee.ch is up to date."
   update-available: "A new version is available"
   update-available-desc: "Updates will be applied after reloading the page"
   settings: "Settings"
