--- a/locales/en.yml
+++ b/locales/en.yml
@@ -127,6 +127,12 @@ common/views/components/messaging.vue:
   search-user: "Find a user"
   you: "You"
   no-history: "Without history"
+common/components/games/reversi/reversi.game.vue:
+  common.reversi.turn-of: My turn
+  common.reversi.past-turn-of: Past turn
+  common.reversi.opponent-turn: Opponent's turn
+  common.reversi.my-turn: My turn
+  common.reversi.win: Win
 common/views/components/messaging-room.vue:
   empty: "No conversations"
   more: "Read more"
