New Crowdin translations (#2026)
* New translations ja.yml

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -58,6 +58,7 @@ common:
     opponent-turn: "Opponent's turn"
     turn-of: "{}'s turn"
     past-turn-of: "{}'s turn"
+    won: "{} won"
   widgets:
     analog-clock: "Analog clock"
     profile: "Profile"
