Localized customization tips on home.vue
Added relevant customization lines.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -6,6 +6,14 @@ common:
   misskey: "A ⭐ of the fediverse"
   about-title: "A ⭐ of the fediverse."
   about: "Thank you for finding Misskey. Misskey is a <b>decentralized microblogging platform</b> born on Earth. Since it exists within the Fediverse (a universe where various social media platforms are organized), it is mutually linked with other social media platforms. Why don't you take a short break from the hustle and bustle of the city, and dive into a new Internet?"
+  
+  customizationtips:
+    title: "Customization tips"
+    paragraph1: "Home customization allows you to add/delete, drag and drop and rearrange widgets."
+    paragraph2: "You can change the display by <strong>right clicking</strong> on some widgets."
+    paragraph3: "To delete a widget, <strong>drag and drop the widget onto the area labeled "Trash"</strong> in the header."
+    paragraph4: "To finish the customization, click "Finish" in the upper right."
+    
   time:
     unknown: "unknown"
     future: "future"
