Added got it to the local files
Home.vue got it was still untranslated. It now has a localization file

--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -13,6 +13,7 @@ common:
     paragraph2: "一部のウィジェットは、<strong><strong>右</strong>クリック</strong>することで表示を変更することができます。"
     paragraph3: "ウィジェットを削除するには、ヘッダーの<strong>「ゴミ箱」</strong>と書かれたエリアにウィジェットをドラッグ&ドロップします。"
     paragraph4: "カスタマイズを終了するには、右上の「完了」をクリックします。"
+    gotit: "Got it!"
 
   time:
     unknown: "なぞのじかん"
