--- a/locales/en.yml
+++ b/locales/en.yml
@@ -13,6 +13,7 @@ common:
     paragraph2: "You can change the display by <strong>right clicking</strong> on some widgets."
     paragraph3: "To delete a widget, <strong>drag and drop the widget onto the area labeled "Trash"</strong> in the header."
     paragraph4: "To finish the customization, click "Finish" in the upper right."
+    gotit: "Got it!"
     
   time:
     unknown: "unknown"
