--- a/locales/en.yml
+++ b/locales/en.yml
@@ -577,6 +577,8 @@ desktop/views/components/settings.profile.vue:
   other: "Other"
   is-bot: "This account is a Bot"
   is-cat: "This account is a Cat"
+  profile-update: "Profile updated"
+  
 desktop/views/components/sub-note-content.vue:
   private: "This post is private"
   deleted: "This post has been deleted"
@@ -887,6 +889,7 @@ mobile/views/pages/settings/settings.profile.vue:
   saved: "Profile updated"
   uploading: "Uploading"
   upload-failed: "Failed to upload"
+  
 mobile/views/pages/search.vue:
   search: "Search"
   empty: "No posts were found for '{}'"
