--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -5,7 +5,16 @@ meta:
 common:
   misskey: "Une ⭐ du fédiverse"
   about-title: "Une ⭐ du fédiverse."
-  about: "Merci d'avoir découvert Misskey. Misskey est une <b>plateforme de micro-blogging distribuée</b> née sur Terre. Parce qu'il fait partie du Fédiverse (un univers composé de diverses plateformes de réseaux sociaux organisées), il est mutuellement connecté avec d'autres plateformes de réseaux sociaux. Désirez-vous prendre une pause, pendant un instant, loin de l'agitation de la ville et plonger dans un nouvel Internet ?"
+  about: "Merci d'avoir découvert Misskey. Misskey est une <b>plateforme de micro-blogging distribuée</b> née sur Terre. Parce qu'il fait partie du Fédiverse (un univers composé de diverses plateformes de réseaux sociaux organisées), il est mutuellement connecté avec d'autres plateformes de réseaux sociaux. Désirez-vous prendre une pause, pendant un instant, loin de l'agitation de la ville et plonger dans un nouvel Internet?"
+  
+  customization-tips:
+    title: "Conseils de personnalisation"
+    paragraph1: "La personnalisation à la maison vous permet d'ajouter / supprimer, glisser et déposer et réorganiser les widgets."
+    paragraph2: "Vous pouvez changer l'affichage en <strong>cliquant droit</strong> sur certains widgets."
+    paragraph3: "Pour supprimer un widget, <strong>glissez et déposez le widget sur la zone étiquetée "Corbeille"</strong> dans l'en-tête."
+    paragraph4: "Pour terminer la personnalisation, cliquez sur "Terminer" dans le coin supérieur droit."
+    gotit: "Compris!"
+  
   time:
     unknown: "inconnu"
     future: "future"
