--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -292,6 +292,11 @@ common/views/widgets/memo.vue:
   title: "付箋"
   memo: "ここに書いて！"
   save: "保存"
+  
+common/views/widgets/slideshow.vue:
+  folder-customize-mode: "フォルダを指定するには、カスタマイズモードを終了してください"
+  folder: "クリックしてフォルダを指定してください"
+  no-image: "このフォルダには画像がありません"
 
 common/views/pages/follow.vue:
   signed-in-as: "{}としてサインイン中"
