--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -780,6 +780,13 @@ desktop/views/pages/selectdrive.vue:
   cancel: "キャンセル"
   upload: "PCからドライブにファイルをアップロード"
 
+desktop/views/pages/search.vue:
+  not-available: "検索機能を利用することができません。"
+  not-found-quotes1: "「"
+  not-found-quotes2: "」"
+  not-found-text-english: ""
+  not-found-text-japanese: "に関する投稿は見つかりませんでした。"
+ 
 desktop/views/pages/share.vue:
   share-with: "Misskeyで共有"
   close: "閉じる"
