--- a/locales/en.yml
+++ b/locales/en.yml
@@ -261,6 +261,34 @@ common/views/widgets/slideshow.vue:
   folder-customize-mode: "To specify a folder, please exit customize mode"
   folder: "Please click and specify a folder"
   no-image: "There is no image in this folder"
+  
+common/views/widgets/tips.vue:
+  tips-line1: "You can focus on the timeline with <kbd>t</kbd>."
+  tips-line2: "Open posting form with <kbd>p</kbd> or <kbd>n</kbd>."
+  tips-line3: "You can drag and drop files on the post form."
+  tips-line4: "You can paste an image from the clipboard into the submission form."
+  tips-line5: "You can upload files by dragging and dropping them to Drive."
+  tips-line6: "You can move a folder by dragging it within the Drive."
+  tips-line7: "You can move folders by dragging them within the Drive"
+  tips-line8: "Home can be customized from the settings widget."
+  tips-line9: "Misskey is licensed under AGPLv3."
+  tips-line10: "Using the Time Machine widget makes it easy to trace back to the past timeline."
+  tips-line11: "You can pin posts to user page by clicking on \"...\""
+  tips-line12: "Drive capacity is 1 GB (by default)"
+  tips-line13: "All the files attached to the post are saved to Drive."
+  tips-line14: "While customizing the home, you can right click on the widget and change the design."
+  tips-line15: "You can also place widgets at the top of the timeline."
+  tips-line16: "Double click on a post to see details."
+  tips-line17: "Surrounding the text with ** ** will highlight it."
+  tips-line18: "By using the channel widget, you can quickly check frequently used channels."
+  tips-line19: "Several windows can be detached outside the browser."
+  tips-line20: "The percentage of the calendar widget shows the percentage of time elapsed."
+  tips-line21: "You can also use the API to develop bots."
+  tips-line22: "Misskey is also available via LINE."
+  tips-line23: "Mayu is so cute with its eyebrows."
+  tips-line24: "Misskey started in 2014."
+  tips-line25: "You can receive notification even if Misskey is not open in a compatible browser."
+
 common/views/pages/follow.vue:
   signed-in-as: "Signed in as {}"
   following: "Following"
