--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -298,6 +298,33 @@ common/views/widgets/slideshow.vue:
   folder: "クリックしてフォルダを指定してください"
   no-image: "このフォルダには画像がありません"
 
+common/views/widgets/tips.vue:
+  tips-line1: "<kbd>t</kbd>でタイムラインにフォーカスできます"
+  tips-line2: "<kbd>p</kbd>または<kbd>n</kbd>で投稿フォームを開きます"
+  tips-line3: "投稿フォームにはファイルをドラッグ&ドロップできます"
+  tips-line4: "投稿フォームにクリップボードにある画像データをペーストできます"
+  tips-line5: "ドライブにファイルをドラッグ&ドロップしてアップロードできます"
+  tips-line6: "ドライブでファイルをドラッグしてフォルダ移動できます"
+  tips-line7: "ドライブでフォルダをドラッグしてフォルダ移動できます"
+  tips-line8: "ホームは設定からカスタマイズできます"
+  tips-line9: "MisskeyはAGPLv3です"
+  tips-line10: "タイムマシンウィジェットを利用すると、簡単に過去のタイムラインに遡れます"
+  tips-line11: "投稿の ... をクリックして、投稿をユーザーページにピン留めできます"
+  tips-line12: "ドライブの容量は(デフォルトで)1GBです"
+  tips-line13: "投稿に添付したファイルは全てドライブに保存されます"
+  tips-line14: "ホームのカスタマイズ中、ウィジェットを右クリックしてデザインを変更できます"
+  tips-line15: "タイムライン上部にもウィジェットを設置できます"
+  tips-line16: "投稿をダブルクリックすると詳細が見れます"
+  tips-line17: "「**」でテキストを囲むと**強調表示**されます"
+  tips-line18: "チャンネルウィジェットを利用すると、よく利用するチャンネルを素早く確認できます"
+  tips-line19: "いくつかのウィンドウはブラウザの外に切り離すことができます"
+  tips-line20: "カレンダーウィジェットのパーセンテージは、経過の割合を示しています"
+  tips-line21: "APIを利用してbotの開発なども行えます"
+  tips-line22: "MisskeyはLINEを通じてでも利用できます"
+  tips-line23: "まゆかわいいよまゆ"
+  tips-line24: "Misskeyは2014年にサービスを開始しました"
+  tips-line25: "対応ブラウザではMisskeyを開いていなくても通知を受け取れます"
+
 common/views/pages/follow.vue:
   signed-in-as: "{}としてサインイン中"
   following: "フォロー中"
